--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,47 +1,122 @@
-CSS /* {
-    margin : 0px;
-    padding : 0px;
+* {
+  margin : 0px;
+  padding : 0px;
+  box-sizing: border-box;
 }
-ul {
-   font-family: Arial, Verdana;
-   font-size: 14px;
-   margin: 0;
-   padding: 10;
-   list-style: none;
+
+body {
+  background-color: #EEA29A;
+  width: 100%;
+  min-height: 100vh;
+  }
+
+html {
+    font-size: 16px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: black;
+    }
+
+h1 {
+    color: white;
+      }
+li a:hover {
+    background-color: #111;
+       }
+
+
+       
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ul {
+ font-family: Arial, Verdana;
+ font-size: 14px;
+ margin: 0;
+ padding: 10;
+ list-style: none;
 }
 nav ul {
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
+ list-style-type: none;
+ margin: 0;
+ padding: 0;
 }
 nav a {
-   float: right;
- color: black;
- text-align: center;
- padding: 14px 16px;
- text-decoration: none;
- font-size: 17px;
-} */
-h1 {
-   display: inline-block;
+ float: right;
+color: black;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
 }
+
+.nav-bar {
+display: flex;
+justify-content: space-between;
+background-color: #333;
+}
+.nav-items {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+background-color: #333;
+}
+.nav-items-2 {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color: #333;
+}
+
 ul {
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
-   overflow: hidden;
-   background-color: #333;
- }
- li {
-   float: right;
- }
- li a {
-   display: block;
-   color: white;
-   text-align: center;
-   padding: 14px 16px;
-   text-decoration: none;
- }
- li a:hover {
-   background-color: #111;
- }
+list-style-type: none;
+padding: 25px;
+margin: 15px 3px;
+overflow: hidden;
+}
+li a {
+color: white;
+text-decoration: none;
+padding: 15px;
+}
+.main-section {
+display: grid;
+grid-template-columns: 100px 100px 100px;
+justify-content: flex-start;
+align-items: center;
+}
+.socials {
+display: flex;
+flex-direction: row;
+justify-content: center;
+background-color: #333;
+}
+.socials a {
+} */
+
+ 
+ 
+
+
+
+
+/* Repeat code? */
+/* * {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+} */
