--- a/CSS/style.css
+++ b/CSS/style.css
@@ -150,14 +150,20 @@ list-style: none;
 margin-right: 0.8rem;
 } 
 
-.contactus {
+/* .contactus {
+  display: flex;
+  justify-content: center;
+  margin-top: 170px;
+} */
+
+#contactus2 {
   display: flex;
   justify-content: center;
   margin-top: 170px;
 }
 
 /* topics contact us pages  */
-.contactus-topics {
+#contactus-topics {
   display: flex;
   justify-content: center;
   margin-top: 360px;
